objects/SFDC_Issue__c.object
<CustomObject>
    <description>Issue related to a Project</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>ISS - {0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001ERKtEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Relates to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Automation</fullName>
                </value>
                <value>
                    <fullName>Marketing Automation</fullName>
                </value>
                <value>
                    <fullName>Support Automation</fullName>
                </value>
                <value>
                    <fullName>User Adoption</fullName>
                </value>
                <value>
                    <fullName>Data Hygiene</fullName>
                </value>
                <value>
                    <fullName>User Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Object__c</fullName>
        <label>SFDC Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Name__c</fullName>
        <label>Issue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Status__c</fullName>
        <label>Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Open</fullName>
                </value>
                <value>
                    <fullName>1 - Being Addressed</fullName>
                </value>
                <value>
                    <fullName>2 - In Escalation</fullName>
                </value>
                <value>
                    <fullName>3 - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Priority__c</fullName>
        <label>Issue Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - High</fullName>
                </value>
                <value>
                    <fullName>4 - Very Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Description__c</fullName>
        <description>Description of the Issue in detail.</description>
        <label>Issue Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>